react-redux-class-immer

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cd 03_react-redux && webpack serve --env development"
+    "dev": "cd 04_react-redux-class-immer && webpack serve --env development"
   },
   "author": "coffeemori",
   "license": "ISC",
   "dependencies": {
+    "immer": "^7.0.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -18,6 +19,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.1.0",
     "react-refresh": "^0.9.0",
